# pluto

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  deny.toml  flake.nix
.claude/: settings.json
.claude/skills/charon-guide/: SKILL.md
.claude/skills/loop-review-pr/: SKILL.md
.claude/skills/pluto-review/: SKILL.md
.claude/skills/porting/: SKILL.md
.claude/skills/review-pr/: SKILL.md
.claude/skills/rust-style/: SKILL.md
.githooks/: pre-push
.github/workflows/: create-cluster-compare.yml  dependency-audit.yml  dkg-runner.yml  test.yml
crates/app/: Cargo.toml
crates/app/src/: lib.rs  retry.rs  stacksnipe.rs
crates/app/src/eth2wrap/: mod.rs  valcache.rs
crates/app/src/health/: checker.rs  checks.rs  error.rs  gatherer.rs  metrics.rs  mod.rs  model.rs  reducers.rs  select.rs
crates/app/src/log/loki/lokipb/: v1.rs
crates/app/src/log/loki/lokipb/v1/: app.log.loki.lokipb.v1.rs
crates/app/src/monitoringapi/: checker.rs  metrics.rs  mod.rs  readiness.rs  router.rs
crates/app/src/obolapi/: client.rs  error.rs  exit.rs
crates/app/src/sse/: metrics.rs  mod.rs  types.rs
crates/build-proto/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  duration.rs  error.rs  main.rs
crates/cluster/: Cargo.toml
crates/cluster/src/: definition.rs  deposit.rs  distvalidator.rs  helpers.rs  lib.rs  load.rs  lock.rs  operator.rs  registration.rs  ssz.rs  test_cluster.rs
crates/consensus/: Cargo.toml
crates/consensus/examples/: qbft.rs
crates/consensus/src/: controller.rs  debugger.rs  instance.rs  lib.rs  metrics.rs  protocols.rs  timer.rs  wrapper.rs
crates/consensus/src/qbft/: component.rs  definition.rs  mod.rs  msg.rs  p2p.rs  qbft_run_test.rs  runner.rs  sniffer.rs  strategy_sim_test.rs  transport.rs
crates/consensus/testdata/vectors/: hashproto.json
crates/core/: Cargo.toml
crates/core/src/: clock.rs  deadline.rs  eth2signeddata.rs  expbackoff.rs  gater.rs  lib.rs  parsigex_codec.rs  scheduler.rs  sigagg.rs  signeddata.rs  ssz_codec.rs  types.rs  unsigneddata.rs  version.rs
crates/core/src/aggsigdb/: memory.rs  mod.rs  types.rs
crates/core/src/bcast/: metrics.rs  mod.rs  recast.rs
crates/core/src/consensus/: instance.rs  mod.rs  timer.rs
crates/core/src/consensus/qbft/: mod.rs  msg.rs  sniffer.rs  transport.rs
crates/core/src/corepb/: v1.rs
crates/core/src/corepb/v1/: consensus.proto  core.corepb.v1.rs  core.proto  parsigex.proto  priority.proto
crates/core/src/deadline/: calculator.rs  mod.rs  msecs.rs
crates/core/src/dutydb/: memory.rs  mod.rs
crates/core/src/fetcher/: graffiti.rs  mod.rs
crates/core/src/parsigdb/: memory.rs  memory_internal_test.rs
crates/core/src/qbft/: callbacks.rs  fake_clock.rs  internal_test.rs  mod.rs
crates/core/src/scheduler/: metrics.rs
crates/core/src/tracker/: analysis.rs  inclusion.rs  metrics.rs  mod.rs  reason.rs  reporters.rs  step.rs
crates/core/src/validatorapi/: component.rs  error.rs  handler.rs  metrics.rs  mod.rs  router.rs  testutils.rs  types.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: blst_impl.rs  tbls.rs  types.rs
crates/dkg/: Cargo.toml
crates/dkg/examples/: bcast.rs  sync.rs
crates/dkg/src/: aggregate.rs  disk.rs  dkg.rs  exchanger.rs  frost.rs  frostp2p.rs  frostp2p_integ_test.rs  lib.rs  node.rs  nodesigs.rs  publish.rs  signing.rs  validators.rs
crates/eth1wrap/: Cargo.toml
crates/eth1wrap/src/: lib.rs
crates/eth2api/: Cargo.toml
crates/eth2api/src/: beacon_node.rs  extensions.rs  lib.rs  v1.rs  valcache.rs  validator_duty.rs  versioned.rs
crates/eth2util/: Cargo.toml
crates/eth2util/src/: enr.rs  eth2exp.rs  helpers.rs  keymanager.rs  network.rs  rlp.rs  signing.rs
crates/featureset/: Cargo.toml
crates/featureset/src/: lib.rs
crates/frost/: Cargo.toml  dkg.md
crates/frost/src/: curve.rs  frost_core.rs  kryptology.rs  kryptology_interop_tests.rs  kryptology_round_trip_tests.rs  lib.rs
crates/frost/tests/kryptology_fixtures/: 2-of-3-ctx-0.json  3-of-3-ctx-0.json  invalid-proof.json  malformed-share-id.json
crates/infosync/: Cargo.toml
crates/infosync/src/: lib.rs
crates/infosync/tests/: infosync_integration.rs
crates/k1util/: Cargo.toml
crates/k1util/src/: k1util.rs
crates/p2p/: Cargo.toml
crates/p2p/examples/: bootnode.rs
crates/p2p/src/: bootnode.rs  config.rs  conn_logger.rs  gater.rs  p2p.rs  p2p_context.rs  peer.rs  proto.rs  relay.rs  utils.rs
crates/p2p/tests/: direct_tcp_connection.rs  relay_circuit.rs
crates/parsigex/: Cargo.toml
crates/parsigex/examples/: parsigex.rs
crates/parsigex/src/: behaviour.rs  error.rs  handler.rs  lib.rs
crates/parsigex/tests/: parsigex_e2e.rs
crates/peerinfo/examples/: peerinfo.rs
crates/peerinfo/src/: protocol.rs
crates/priority/: Cargo.toml
crates/priority/src/: calculate.rs  component.rs  consensus.rs  error.rs  lib.rs  prioritiser.rs
crates/priority/src/p2p/: behaviour.rs  handler.rs  mod.rs  protocol.rs
crates/priority/tests/: interop_protocol_id.rs  prioritiser_test.rs
crates/relay-server/: Cargo.toml
crates/relay-server/src/: config.rs  lib.rs  p2p.rs  utils.rs  web.rs
crates/relay-server/tests/: http_integration.rs
crates/ssz/: Cargo.toml
crates/ssz/src/: hasher.rs  lib.rs  serde_utils.rs  types.rs
crates/testutil/: Cargo.toml  build.rs
crates/testutil/src/: lib.rs
crates/testutil/src/beaconmock/: attestation.rs  defaults.rs  fuzzer.rs  headproducer.rs  mod.rs  options.rs  state.rs
crates/testutil/src/validatormock/: attest.rs  capture.rs  clock.rs  close_once.rs  component.rs  error.rs  meta.rs  mod.rs  propose.rs  sign.rs  synccomm.rs  validators.rs
crates/tracing/: Cargo.toml
crates/tracing/examples/: basic.rs
crates/tracing/src/: config.rs  init.rs  lib.rs  metrics.rs
scripts/: create-cluster-compare.sh  gen_static_beaconmock.sh
scripts/dkg-runner/: README.md  collect.sh  config.sh  lib.sh  monitor.sh  reset.sh  run-node.sh  run.sh  setup.sh  start-nodes.sh  wait-node-exits.sh
test-infra/: docker-compose.mixed-dkg-test.yml  docker-compose.mixed-peers-test.yml  docker-compose.yml  prometheus.yml  rules.yml
(+54 files in other folders)
