[package]
name = "pluto-app"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
backon.workspace = true
chrono.workspace = true
futures.workspace = true
pluto-core.workspace = true
pluto-eth2api.workspace = true
tokio.workspace = true
tokio-util.workspace = true
vise.workspace = true
prost.workspace = true
prost-types.workspace = true
regex.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
k256.workspace = true
serde_with.workspace = true
bon.workspace = true
flate2.workspace = true
tar.workspace = true
tempfile.workspace = true
pluto-cluster.workspace = true
pluto-k1util.workspace = true
pluto-crypto.workspace = true
pluto-ssz.workspace = true
pluto-p2p.workspace = true

[build-dependencies]
pluto-build-proto.workspace = true

[dev-dependencies]
libp2p.workspace = true
pluto-testutil.workspace = true
wiremock.workspace = true
test-case.workspace = true
tower = { workspace = true, features = ["util"] }

[lints]
workspace = true
