[package]
name = "pluto-consensus"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
cancellation.workspace = true
chrono.workspace = true
crossbeam.workspace = true
futures.workspace = true
hex.workspace = true
either.workspace = true
k256.workspace = true
libp2p.workspace = true
pluto-core.workspace = true
pluto-featureset.workspace = true
pluto-k1util.workspace = true
pluto-p2p.workspace = true
pluto-ssz.workspace = true
prost.workspace = true
prost-types.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
vise.workspace = true

[dev-dependencies]
anyhow.workspace = true
clap.workspace = true
pluto-cluster.workspace = true
pluto-eth2api.workspace = true
pluto-eth2util.workspace = true
pluto-tracing.workspace = true
serde_json.workspace = true
ssz.workspace = true
test-case.workspace = true
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
