[package]
name = "pluto-core"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
alloy.workspace = true
backon.workspace = true
async-trait.workspace = true
bon.workspace = true
axum.workspace = true
cancellation.workspace = true
chrono.workspace = true
crossbeam.workspace = true
dyn-clone.workspace = true
dyn-eq.workspace = true
futures.workspace = true
hex.workspace = true
vise.workspace = true
pluto-crypto.workspace = true
pluto-eth2api.workspace = true
pluto-featureset.workspace = true
prost.workspace = true
prost-types.workspace = true
regex.workspace = true
reqwest = { workspace = true, features = ["stream"] }
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
pluto-eth2util.workspace = true
pluto-ssz.workspace = true
ssz.workspace = true
ssz_derive.workspace = true
tree_hash.workspace = true
url.workspace = true

[dev-dependencies]
anyhow.workspace = true
clap.workspace = true
rand.workspace = true
prost.workspace = true
prost-types.workspace = true
hex.workspace = true
chrono.workspace = true
test-case.workspace = true
pluto-eth2util.workspace = true
pluto-cluster.workspace = true
pluto-testutil.workspace = true
pluto-tracing.workspace = true
tokio = { workspace = true, features = ["test-util"] }
wiremock.workspace = true
tower = { workspace = true, features = ["util"] }

[build-dependencies]
pluto-build-proto.workspace = true
built.workspace = true

[lints]
workspace = true
