[package]
name = "pluto-frost"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
blst.workspace = true
rand_core.workspace = true
sha2.workspace = true
subtle.workspace = true
thiserror.workspace = true
zeroize = { workspace = true, features = ["derive"] }

[dev-dependencies]
hex.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints.rust]
missing_docs = "deny"
# Allow unsafe code for blst C bindings (overrides workspace forbid)
unsafe_code = "allow"

[lints.clippy]
arithmetic_side_effects = "deny"
cast_lossless = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
needless_return = "deny"
panicking_overflow_checks = "deny"
unwrap_used = "deny"
