[package]
name = "pluto-priority"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
either.workspace = true
futures.workspace = true
k256.workspace = true
libp2p.workspace = true
pluto-consensus.workspace = true
pluto-core.workspace = true
pluto-k1util.workspace = true
pluto-p2p.workspace = true
pluto-ssz.workspace = true
prost.workspace = true
prost-types.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
pluto-testutil.workspace = true
rand.workspace = true
test-case.workspace = true
tokio = { workspace = true, features = ["test-util", "rt-multi-thread", "macros", "net", "time", "io-util"] }
# Interop proof: drive the patched multistream-select negotiation over real TCP.
multistream-select = "0.13"
tokio-util = { workspace = true, features = ["compat"] }
futures.workspace = true

[lints]
workspace = true
