[package]
name = "pluto-ssz"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
hex.workspace = true
k256.workspace = true
serde.workspace = true
serde_with.workspace = true
ssz.workspace = true
thiserror.workspace = true
tree_hash.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
