[package]
name = "pluto-testutil"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
build = "build.rs"

[build-dependencies]
serde_json.workspace = true

[dependencies]
anyhow.workspace = true
bon.workspace = true
chrono.workspace = true
k256.workspace = true
pluto-crypto.workspace = true
pluto-eth2api.workspace = true
rand.workspace = true
hex.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tree_hash.workspace = true
wiremock.workspace = true

[dev-dependencies]
reqwest.workspace = true

[lints]
workspace = true
